# ai-art-consent

./: README.md  pyproject.toml  removed
ai-art-consent/: base.ipynb  base2.ipynb  mnist.ipynb  model.py  pred_artist.ipynb
images/: generate.py  parse.py
